--- a/js.html
+++ b/js.html
@@ -2,10 +2,14 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="js.css"/>
     <title></title>
   </head>
 
-  <body></body>
+  <body>
+
+    <script src="app.js"></script>
+    
+  </body>
 
 </html>
